Fix text being able to overflow posts

--- a/app/javascript/flavours/aether/styles/components/status.scss
+++ b/app/javascript/flavours/aether/styles/components/status.scss
@@ -86,6 +86,10 @@
       margin-bottom: 0;
     }
   }
+  
+  p {
+    overflow:hidden;
+  }
 
   a {
     color: var(--ui-font-secondary-color);
